[gd_scene load_steps=8 format=3 uid="uid://5bymewa5wxxf"]

[ext_resource type="Script" path="res://game/ui/ConfirmationScreen.gd" id="1_40f4i"]
[ext_resource type="PackedScene" uid="uid://yopd6eyct7hx" path="res://game/mobile/MobileBGHelp.tscn" id="2_8015s"]
[ext_resource type="Theme" uid="uid://dcnk7jk5h3hov" path="res://assets/ui/SettingsMobileTheme.tres" id="3_5r6cq"]

[sub_resource type="Animation" id="Animation_mqb4d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Content:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Content:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_84cm6"]
resource_name = "disable"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Content:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Content:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_mh6ii"]
resource_name = "enable"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Content:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Content:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sb0jh"]
_data = {
"RESET": SubResource("Animation_mqb4d"),
"disable": SubResource("Animation_84cm6"),
"enable": SubResource("Animation_mh6ii")
}

[node name="ConfirmationScreen" type="CanvasLayer"]
layer = 3
script = ExtResource("1_40f4i")

[node name="BG" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.0352941, 0.141176, 0.980392)

[node name="MobileBGHelp" parent="." instance=ExtResource("2_8015s")]
visible = false

[node name="Content" type="Control" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("3_5r6cq")

[node name="CenterContainer" type="CenterContainer" parent="Content"]
unique_name_in_owner = true
layout_mode = 1
offset_right = 722.0
offset_bottom = 1280.0

[node name="VBoxContainer" type="VBoxContainer" parent="Content/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 97
alignment = 1

[node name="MainTitle" type="Label" parent="Content/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "DEFAULT_CONFIRMATION"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="Content/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 120
alignment = 1

[node name="Yes" type="Button" parent="Content/CenterContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "YES"

[node name="No" type="Button" parent="Content/CenterContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "NO"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 3.5
libraries = {
"": SubResource("AnimationLibrary_sb0jh")
}

[connection signal="mouse_entered" from="Content/CenterContainer/VBoxContainer/ButtonsContainer/Yes" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Content/CenterContainer/VBoxContainer/ButtonsContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="mouse_entered" from="Content/CenterContainer/VBoxContainer/ButtonsContainer/No" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Content/CenterContainer/VBoxContainer/ButtonsContainer/No" to="." method="_on_no_pressed"]
